Fix overflow of editor in note detail

--- a/app/assets/stylesheets/components/notes/note_detail.scss
+++ b/app/assets/stylesheets/components/notes/note_detail.scss
@@ -72,6 +72,7 @@
 .detail-form {
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
   height: 100%;
   padding: 0 45px;
 }
